Add more margins

--- a/architecture-examples/backbone/url.css
+++ b/architecture-examples/backbone/url.css
@@ -1,6 +1,6 @@
 .url-info {
   padding: 10px;
-  margin-left: 60px;
+  margin: 5px 20px 10px 60px;
   border: 1px solid #c3c3c3;
   line-height: 1em;
 }
